<resources>
    <string name="app_name">GraySon</string>

    <!-- WeatherModel API -->
    <string name="city">Varna</string>
    <string name="_108_psa">108 Psa</string>
    <string name="temperature">30 C</string>
    <string name="update_data">update</string>
    <string name="change_city">Change city</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_icon">Weather icon</string>
    <string name="weather_dialog_menu_bt">Accept</string>
    <string name="weather_main_ico">weather_main_ico</string>
    <string name="weather_dialog_menu_title">Change city</string>
    <string name="place_not_found">Sorry, no weatherModel data found.</string>
    <string name="open_weather_maps_app_id">65b938422c71f0d088afb635b24da2be</string>

    <!-- Bluetooth -->
    <string name="send">SEND</string>
    <string name="no_data">No data</string>
    <string name="label_data">Data:</string>
    <string name="label_state">State:</string>
    <string name="connected">Connected</string>
    <string name="image_send">Image Send</string>
    <string name="image_pick">Image Pick</string>
    <string name="disconnected">Disconnected</string>
    <string name="unknown_device">Unknown device</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="enter_text_here">Enter Text Here</string>
    <string name="unknown_service">Unknown service</string>
    <string name="label_device_address">Device address:</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <!-- Bluetooth menu items-->
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="on_off_button">Power</string>
    <string name="discoverable">Action</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="bt_connected_state">Connected</string>
    <string name="bt_found_devices">Found Devices</string>
    <string name="bt_connecting_state">Connecting</string>
    <string name="bt_toast_connect_to">Connected to</string>
    <string name="bt_not_connected_state">Disconnected</string>
    <string name="remote_control_logger">Remote Control</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Music player -->
    <string name="time">0:00</string>
    <string name="song_title">Song title</string>
    <string name="song_artist">Song artist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="todo">TODO</string>
    <string name="bluetooth_on_off">Bluetooth on/off</string>
    <string name="bluetooth_search">Bluetooth search</string>
    <string name="bluetooth_discovery">Bluetooth discovery</string>
    <string name="toast_bt_pairing">Trying to pair with..</string>
    <string name="toast_bt_enable">enable Bluetooth</string>
    <string name="power">power</string>

    <!-- API Account -->
    <string name="TYPE_EMAIL_HERE">email_address</string>
    <string name="ACCOUNT_PASSWORD">account password</string>
    <string name="api_download_error">Error downloading files from FireBase</string>
    <string name="api_download_complete">Downloading files from FireBase complete</string>

    <!-- Recognizer Action TTS say -->
    <string name="kws_caption">To start demonstration say \"okay gray\".</string>
    <string name="google_conversation_start">Okay Google</string>
    <string name="action_start_assistant">Starting Google Assistant</string>
    <string name="recognizer_time_out">Timeout!</string>
    <string name="action_download_complete">Download complete</string>
    <string name="action_start_music_player">I\'m starting music player</string>
    <string name="action_playing_music">I\'m playing music</string>
    <string name="action_stop_music">I\'m stop music</string>
    <string name="action_next_song">Playing next song</string>
    <string name="action_previous_song">Playing previous song</string>
    <string name="action_stop_music_player">Stop music player</string>
    <string name="action_play_video">I\'m playing video</string>
    <string name="action_stop_video">I\'m stop video</string>
    <string name="action_previous_video">I\'m playing previous video</string>
    <string name="action_next_video">I\'m playing next video</string>
    <string name="action_show_menu">I\'m showing menu</string>
    <string name="action_select_menu">Selecting</string>
    <string name="action_menu_next">menu next</string>
    <string name="action_menu_back">menu back</string>
    <string name="action_menu_previous">menu previous</string>
    <string name="action_hide_menu">I\'m hiding menu</string>
    <string name="action_play_youtube">I\'m playing Youtube</string>
    <string name="action_bluetooth_on">Turn Bluetooth on</string>
    <string name="action_bluetooth_off">Turn Bluetooth off</string>
    <string name="action_bluetooth_discovery">Turn Bluetooth discovery for 30 seconds</string>
    <string name="action_bluetooth_search">Scanning for unpaired devices</string>
    <string name="action_api_download">I am hunger for files. I\'m will eat em all</string>
    <string name="action_show_day_photo">Showing day photo</string>
    <string name="action_stop_day_photo">Stop day photo</string>
    <string name="action_connect_cloud">Connecting Cloud Storage</string>
    <string name="action_sing_google_account">Sing In Google account</string>
    <string name="action_sing_out_google_account">Sing Out Google account</string>
    <string name="action_show_weather">okay i am starting weather forecast</string>
    <string name="action_change_weather_city">I\'m changing weather city</string>
    <string name="action_file_uploading">Starting file uploading.</string>
    <string name="action_lights_on">Turning light on</string>
    <string name="action_lights_off">Turning light off</string>
    <string name="action_red_lights">Turning light red</string>
    <string name="action_green_lights">Turning light green</string>
    <string name="action_blue_lights">Turning light blue</string>
    <string name="action_lights_auto">Automatic change lights colors</string>
    <string name="action_weather_forecast">okay i am starting weather forecast</string>
    <string name="action_turn_off">Again, okay I\'m turning off</string>
    <string name="action_cloud_photo_download">I am hunger for files. I\'m will eat em all</string>
    <string name="turn_on">Yaaaaaaaaahoooooo</string>
    <string name="toast_bt_disabled">disable Bluetooth</string>
    <string name="toast_bt_discovery">Discover enabled for 300 seconds</string>
    <string name="tts_bt_discovery_enabled">Bluetooth audio sink is discoverable for</string>
    <string name="tts_bt_ready">Bluetooth Adapter ready</string>
    <string name="tts_bt_connect_to">Connected to</string>
    <string name="tts_bt_disconnect">Disconnected from</string>
    <string name="tts_bt_playing_audio">Playing audio</string>
    <string name="tts_bt_stop_playing_audio">Stop playing audio</string>

</resources>
