<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".bluetooth.BluetoothActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/connected_devices"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/found_device_text_frame"
                android:layout_width="44dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@color/whiteTransparent">

                <com.example.root.grayson.bluetooth.VerticalTextView
                    android:id="@+id/found_device_text"
                    style="@style/verticalTextStyle"
                    android:text="@string/bt_found_devices" />
            </FrameLayout>

            <ListView
                android:id="@+id/bt_devices_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/found_device_text_frame"
                android:background="@color/whiteBackTransparent"
                android:dividerHeight="-10dp"
                android:stackFromBottom="true"
                android:transcriptMode="alwaysScroll" />

        </RelativeLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <FrameLayout
                android:id="@+id/remote_control_text_frame"
                android:layout_width="44dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@color/whiteTransparent">

                <com.example.root.grayson.bluetooth.VerticalTextView
                    android:id="@+id/remote_control_text"
                    style="@style/verticalTextStyle"
                    android:text="@string/remote_control_logger" />
            </FrameLayout>

            <ListView
                android:id="@+id/bt_log_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@id/remote_control_text_frame"
                android:background="@color/whiteBackTransparent"
                android:stackFromBottom="true"
                android:transcriptMode="alwaysScroll" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/connected_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/BluetoothList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_device_address" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/device_address"
                style="@style/BluetoothList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/BluetoothList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_state" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/connection_state"
                style="@style/BluetoothList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disconnected" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
